--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,7 @@
 
 <%- include ../partials/header -%>
 <%- include ../partials/nav -%>
+
 <!-- Page title-->
 <div class="jumbotron text-center ">
   <h1>Welcome to Principal Global !</h1>
@@ -14,7 +15,12 @@
         <div class="card-body text-center">
         <h5 class="card-title">Upload PDF</h5>
         <p class="card-text">Use a applicant PDF document to auto-authenticate applicant </p>
-        <a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload PDF</a>
+        <form ref='uploadForm' id='uploadForm'  action='upload'  method='post'  encType="multipart/form-data">
+          <input class = "form-control" type="file" name="upload_file" />
+          <input type = "hidden" name="file_type" value = "pdf"/>
+          <button class = "btn btn-primary" type='submit' value='Upload'> <i class="fa fa-upload" aria-hidden="true"></i> Upload </button>
+        </form>
+          <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload PDF</a-->
         <br>
         <button class="btn btn-success mt-4 pr-3 pl-3">Start Authentication Process</button>
         </div>
@@ -26,7 +32,12 @@
       <div class="card-body text-center">
       <h5 class="card-title">Upload Excel</h5>
       <p class="card-text">Use a applicant Excel document to auto-authenticate applicant </p>
-      <a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload Excel</a>
+      <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload Excel</a-->
+        <form ref='uploadForm' id='uploadForm' action='upload' method='post' encType="multipart/form-data">
+          <input class = "form-control" type="file" name="upload_file" />
+          <input type = "hidden" name="file_type" value = "xls" />
+          <button class = "btn btn-primary" type='submit' value='Upload'> <i class="fa fa-upload" aria-hidden="true"></i> Upload </button>
+        </form>
       <br>
       <button class="btn btn-success mt-4 pr-3 pl-3">Start Authentication Process</button>
     </div>
