--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 
 <%- include ../partials/header -%>
 <%- include ../partials/nav -%>
-
+</script>
 <!-- Page title-->
 <div class="jumbotron text-center ">
   <h1>Welcome to Principal Global !</h1>
@@ -39,7 +39,8 @@
           <button class = "btn btn-primary mt-2" type='submit' value='Upload'> <i class="fa fa-upload" aria-hidden="true"></i> Upload </button>
         </form>
       <br>
-      <button class="btn btn-success mt-4 pr-3 pl-3">Start Authentication Process</button>
+      <button class="btn btn-success mt-4 pr-3 pl-3 " onclick="printFiles()">Start Authentication Process</button>
+      
       </div>
     </div>
   </div>
