--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,46 +1,47 @@
-
 <%- include ../partials/header -%>
 <%- include ../partials/nav -%>
 </script>
 <!-- Page title-->
 <div class="jumbotron text-center ">
   <h1>Welcome to Principal Global !</h1>
-  <p>Automated Dental Credentialing Authentication</p> 
+  <p>Automated Dental Credentialing Authentication</p>
 </div>
-  
+
 <!--2 cat card views-->
 <div class="container">
   <div class="row m-2">
     <div class="card  col-sm-5 shadow-lg p-3 mb-5 bg-white rounded">
-        <div class="card-body text-center">
+      <div class="card-body text-center">
         <h5 class="card-title">Upload PDF</h5>
         <p class="card-text">Use a applicant PDF document to auto-authenticate applicant </p>
-        <form ref='uploadForm' id='uploadForm'  action='upload'  method='post'  encType="multipart/form-data">
-          <input class = "form-control" type="file" name="upload_file" />
-          <input type = "hidden" name="file_type" value = "pdf"/>
-          <button class = "btn btn-primary mt-2" type='submit' value='Upload'> <i class="fa fa-upload" aria-hidden="true"></i> Upload </button>
+        <form ref='uploadForm' id='uploadForm' action='upload' method='post' encType="multipart/form-data">
+          <input class="form-control" type="file" name="upload_file" />
+          <input type="hidden" name="file_type" value="pdf" />
+          <button class="btn btn-primary mt-2" type='submit' value='Upload'> <i class="fa fa-upload"
+              aria-hidden="true"></i> Upload </button>
         </form>
-          <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload PDF</a-->
+        <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload PDF</a-->
         <br>
         <button class="btn btn-success mt-4 pr-3 pl-3">Start Authentication Process</button>
-        </div>
+      </div>
     </div>
     <div class="col-sm-2 ">
       <hr class="hr-ver" style="border:none; border-left: 1px solid hsla(200, 10%, 50%,100);  height: 70%; width: 1px;">
     </div>
     <div class="card  col-sm-5 shadow-lg p-3 mb-5 bg-white rounded">
       <div class="card-body text-center">
-      <h5 class="card-title">Upload Excel</h5>
-      <p class="card-text">Use a applicant Excel document to auto-authenticate applicant </p>
-      <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload Excel</a-->
+        <h5 class="card-title">Upload Excel</h5>
+        <p class="card-text">Use a applicant Excel document to auto-authenticate applicant </p>
+        <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload Excel</a-->
         <form ref='uploadForm' id='uploadForm' action='upload' method='post' encType="multipart/form-data">
-          <input class = "form-control" type="file" name="upload_file" />
-          <input type = "hidden" name="file_type" value = "xls" />
-          <button class = "btn btn-primary mt-2" type='submit' value='Upload'> <i class="fa fa-upload" aria-hidden="true"></i> Upload </button>
+          <input class="form-control" type="file" name="upload_file" />
+          <input type="hidden" name="file_type" value="xls" />
+          <button class="btn btn-primary mt-2" type='submit' value='Upload'> <i class="fa fa-upload"
+              aria-hidden="true"></i> Upload </button>
         </form>
-      <br>
-      <button class="btn btn-success mt-4 pr-3 pl-3 " onclick="printFiles()">Start Authentication Process</button>
-      
+        <br>
+        <button class="btn btn-success mt-4 pr-3 pl-3 " onclick="printFiles()">Start Authentication Process</button>
+
       </div>
     </div>
   </div>
@@ -51,10 +52,10 @@
 <div class="container">
   <div class="row  text-center">
     <div class="card m-3 col-sm-12 shadow-lg p-3 mb-5 bg-white rounded">
-        <div class="card-body text-center">
-          <h5 class="card-title">Import from Database</h5>
-          <br>
-          <div class="row">
+      <div class="card-body text-center">
+        <h5 class="card-title">Import from Database</h5>
+        <br>
+        <div class="row">
           <div class="col-sm-3 mt-3">
             <label>Enter Application ID : </label>
           </div>
@@ -64,11 +65,11 @@
           <div class="col-sm-3 mt-1">
             <button class="btn btn-success" type="submit">Search</button>
           </div>
-          </div>
-          <br>
-          <p class="text-center">or</p>
-          <br>
-          <div class="row">
+        </div>
+        <br>
+        <p class="text-center">or</p>
+        <br>
+        <div class="row">
           <div class="col-sm-3 mt-3">
             <label>Enter Applicant name : </label>
           </div>
@@ -78,13 +79,10 @@
           <div class="col-sm-3 mt-1">
             <button class="btn btn-success" type="submit">Search</button>
           </div>
-          </div>
-
         </div>
+
+      </div>
     </div>
   </div>
 </div>
 <%- include ../partials/footer -%>
-
-
-
