Remove test files, update JC to JD

--- a/views/pages/status.ejs
+++ b/views/pages/status.ejs
@@ -38,7 +38,7 @@ const VerificationList = {
     }
 };
 
-const details = {name:"Jon Cena",appId:"#10321702020",state:"ButUcantSeehim"};
+const details = {name:"Jonn Doe",appId:"#10321702020",state:"Ohio"};
 
  %>
 <body >
