--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,46 @@
+<!-- Footer -->
+<footer class="bg-dark text-white page-footer special-color-dark pt-4 ">
+
+    <!-- Footer Elements -->
+    <div class="container">
+  
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a href="https://www.facebook.com/PrincipalFinancial" class="btn-floating btn-fb mx-1">
+            <i class="fa fa-facebook-f fa-lg"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://twitter.com/Principal" class="btn-floating btn-tw mx-1">
+            <i class="fa fa-twitter fa-lg"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://www.linkedin.com/company/principalfinancialgroup/" class="btn-floating btn-gplus mx-1">
+            <i class="fa fa-linkedin fa-lg"> </i>
+          </a>
+        </li>
+        
+        <li class="list-inline-item">
+            <a href="https://www.youtube.com/user/PrincipalFinancial" class="btn-floating btn-gplus mx-1">
+              <i class="fa fa-youtube fa-lg"> </i>
+            </a>
+        </li>
+      </ul>
+      <!-- Social buttons -->
+  
+    </div>
+    <!-- Footer Elements -->
+  
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-1">© 2020, Principal Financial Services, Inc.
+        <br>
+        Securities offered through Principal Securities, Inc., member SIPC
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+    
     </body>
 </html>
