--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>PG Hackathon</title>
+    <title>Principal Global</title>
+    <!--Favicon karna hai badmai-->
+    <link rel="icon" type="image/png" href="public\images\title.png" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -11,4 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../public/stylesheets/style.css" type="text/html">
 </head>
+
+  
 <body>
