--- a/views/pages/status.ejs
+++ b/views/pages/status.ejs
@@ -20,7 +20,7 @@ var VerificationList = {
 <body >
 
 <div class="m-3">
-
+<h1><%= result %> </h1>
 <div class="container mt-5 p-3 card shadow-lg bg-white rounded">
     <div class="row  text-center">
         <div class="col-sm-12">
