--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
 
 <!--2 cat card views-->
 <div class="container">
-  <div class="row" style="display: contents">
+  <div class="row m-2" style="display: contents">
     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
       <div class="card-body text-center">
         <h5 class="card-title">Upload the application file or enter the application number instead.</h5>
