--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,7 @@
 <!--2 cat card views-->
 <div class="container">
   <div class="row m-2" style="display: contents">
-    <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+    <div class="card shadow-lg p-3 mb-5 mt-4 bg-white rounded">
       <div class="card-body text-center">
         <h5 class="card-title">Upload the application file or enter the application number instead.</h5>
         <form ref='uploadForm' id='uploadForm' action='upload' method='post' encType="multipart/form-data">
@@ -48,7 +48,7 @@
           </div>
         </form>
         <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload PDF</a-->
-        <button class="btn btn-success mt-4 pr-3 pl-3">Start Authentication Process</button>
+        <button class="btn btn-primary mt-4 pr-3 pl-3">Start Authentication Process</button>
       </div>
     </div>
   </div>
