--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <!--Nav Bar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+<nav class="navbar navbar-dark py-0 sticky-top navbar-expand-lg py-md-0" style="background-color: #0091da;">
     <a class="navbar-brand" href="#"><img src="./images/pg-logo.png" height="45px" width="110px"></img></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -11,24 +11,12 @@
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/status">Status</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Import PDF</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Import Excel</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">View Database</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="#">Help</a>
             </li>
         </ul>
-        <form class="form-inline">
+        <form class="form-inline pt-3">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
     
