--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,7 +48,7 @@
           </div>
         </form>
         <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload PDF</a-->
-        <button class="btn btn-primary mt-4 pr-3 pl-3">Start Authentication Process</button>
+        <button class="btn btn-primary mt-4 pr-3 pl-3">Authenticate</button>
       </div>
     </div>
   </div>
