--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bg-dark text-white page-footer special-color-dark pt-4 ">
+<footer class="bg-primary text-white page-footer special-color-primary pt-4 ">
 
     <!-- Footer Elements -->
     <div class="container">
@@ -8,23 +8,23 @@
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
           <a href="https://www.facebook.com/PrincipalFinancial" class="btn-floating btn-fb mx-1">
-            <i class="fa fa-facebook-f fa-lg"> </i>
+            <i class="fa fa-facebook-f fa-lg" style="color:white"> </i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://twitter.com/Principal" class="btn-floating btn-tw mx-1">
-            <i class="fa fa-twitter fa-lg"> </i>
+            <i class="fa fa-twitter fa-lg" style="color:white"> </i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://www.linkedin.com/company/principalfinancialgroup/" class="btn-floating btn-gplus mx-1">
-            <i class="fa fa-linkedin fa-lg"> </i>
+            <i class="fa fa-linkedin fa-lg" style="color:white"> </i>
           </a>
         </li>
         
         <li class="list-inline-item">
             <a href="https://www.youtube.com/user/PrincipalFinancial" class="btn-floating btn-gplus mx-1">
-              <i class="fa fa-youtube fa-lg"> </i>
+              <i class="fa fa-youtube fa-lg " style="color:white" > </i>
             </a>
         </li>
       </ul>
