--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,22 +19,28 @@
 
 <!--2 cat card views-->
 <div class="container">
-  <div class="row m-2" style="display: contents">
-    <div class="card shadow-lg p-3 mb-5 mt-4 bg-white rounded">
+  <br>
+  <br>
+  <div class="row justify-content-center m-2">
+    <div class="col-md-8 card shadow-lg p-3 mb-5 mt-4 bg-white rounded">
       <div class="card-body text-center">
-        <h5 class="card-title">Upload the application file or enter the application number instead.</h5>
+        
         <form ref='uploadForm' id='uploadForm' action='upload' method='post' encType="multipart/form-data">
           <div id="B" style="display:none">
+            <h3 class="card-text">Upload from Database</h3>
             <br>
             <input class="form-control" type="search" placeholder="Application ID" aria-label="Application ID">
-            <button class="btn btn-primary mt-3" type='submit' value='application_search' name="authenticate">
+            <br>
+            <button class="btn btn-primary mt-1" type='submit' value='application_search' name="authenticate">
               Authenticate
             </button>
           </div>
           <div id="A">
-            <p class="card-text">Use a applicant Excel document to auto-authenticate applicant </p>
+            <h3 class="card-text">Upload from Excel</h3>
+            <br>
             <input class="form-control" type="file" name="upload_file" />
             <input type="hidden" name="file_type" value="pdf" />
+            <br>
             <button class="btn btn-primary mt-3" type='submit' value='upload' name = "authenticate">
               Authenticate
             </button>
@@ -42,7 +48,7 @@
           <br>
           <div class = "radio" >
             <input type="radio" onchange="hideB(this)" name="aorb" checked> File Upload |
-            <input type="radio" onchange="hideA(this)" name="aorb">Application Search
+            <input type="radio" onchange="hideA(this)" name="aorb"> Application Search
           </div>
         </form>
         <!--a href="#" class="btn btn-primary" id="uploadPDF" onchange="uploadFile()"><i class="fa fa-upload" aria-hidden="true"></i>  Upload PDF</a-->
@@ -50,6 +56,8 @@
       </div>
     </div>
   </div>
+  <br>
+  <br>
 </div>
 
 <hr>
