--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,10 +14,16 @@
                 <a class="nav-link" href="#">Help</a>
             </li>
         </ul>
-        <form class="form-inline pt-3">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <ul class="navbar-nav mr">
+            <li>
+                <input class="form-control mr-sm-2" style="width:200px;" type="search" placeholder="Search" aria-label="Search">
+            </li>
+            <li>
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            </li>
+        </ul>
+            
+
     </div>
     
 </nav>
