--- a/views/pages/statusMany.ejs
+++ b/views/pages/statusMany.ejs
@@ -139,7 +139,7 @@ function returnColor(item)
                     </table>
                     <hr>
                     <div>
-                        <button class="btn btn-primary" type="submit">Download Report </button>
+                        <a href = "/download" role="button" class = "btn btn-primary">Download Report </a>
                     </div>
                 </div>
             </div>
